# swb-sys-monitor

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml
.github/workflows/: checks.yml  docker.yml.bak  pull_request.yml  push.yml  release.yml
benches/: main.rs
docs/: design.md  example.html  status.md
scripts/: README.md  get-version.bash  install.sh  is-newer-version.bash  publish-crates-io.bash  setup-pre-commit-hooks.bat  setup-pre-commit-hooks.ps1  setup-pre-commit-hooks.sh  swb-sys-monitor.service  uninstall.sh
src/: cache.rs  lib.rs  main.rs  server.rs  stats.rs
templates/: index.html
